<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        tools:context=".AboutUS">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/aboutus"
            android:background="@drawable/textview_background2"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="18dp"
            android:padding="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/about" />

        <TextView
            android:id="@+id/details"
            android:text="@string/details"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:justificationMode="inter_word"
            android:layout_below="@id/aboutus" />

        <TextView
            android:id="@+id/details2"
            android:text="@string/details2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_below="@id/details" />

        <TextView
            android:id="@+id/details3"
            android:text="@string/details3"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center"
            android:autoLink="web"
            android:layout_below="@id/details2" />

        <TextView
            android:text="Developer Information"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/details3"
            android:background="@color/design_default_color_secondary_variant"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/details3">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/a1"
                android:layout_marginTop="60dp"
                />

            <TextView
                android:text="@string/gabriel"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/a2"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:text="@string/caesy"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/a3"
                android:layout_marginTop="10dp"
                 />

            <TextView
                android:text="@string/sofeya"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/a4"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/ju"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/copyright"
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
