<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/w"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_marginTop="-50dp"/>

    <TextView
        android:text="@string/register"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_verified_user_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/register" />







</LinearLayout>

