<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/w"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_marginTop="90dp"/>

    <TextView
        android:text="@string/login"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/baseline_remove_red_eye_24"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>




    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/login"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/registerNow"
        android:text="@string/Click_to_register"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>





</LinearLayout>