<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall2"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:titleTextColor="@android:color/white" />



    <TextView
        android:id="@+id/usernameTextView"
        android:background="@drawable/textview_background"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18dp"
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:alpha="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:alpha="1"
        android:src="@drawable/logo" />



    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        >



        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/about" />

        <Button
            android:id="@+id/Mypst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/Mypst" />


        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/Logout" />
    </LinearLayout>

</RelativeLayout>
